[gd_scene load_steps=6 format=3 uid="uid://h63lrlrxyasv"]

[ext_resource type="Script" path="res://2D/Scenes/House/cabin.gd" id="1_exkum"]
[ext_resource type="PackedScene" uid="uid://cbt0riqiohi4w" path="res://2D/Scenes/House/cabinBackgound.tscn" id="1_rencs"]
[ext_resource type="PackedScene" uid="uid://benrneih6rhle" path="res://2D/Scenes/Player/player.tscn" id="2_ptxad"]
[ext_resource type="PackedScene" uid="uid://c7wu32nfhncw6" path="res://2D/Scenes/House/cabinWall.tscn" id="3_otxru"]
[ext_resource type="PackedScene" uid="uid://dm1uaq5fv2nh6" path="res://2D/Interaction 2D/Interaction/interactable2d.tscn" id="4_cher8"]

[node name="Cabin" type="Node2D"]
script = ExtResource("1_exkum")

[node name="StaticBody2D2" parent="." instance=ExtResource("1_rencs")]
position = Vector2(0, -2)

[node name="Player" parent="." instance=ExtResource("2_ptxad")]
position = Vector2(338, 194)

[node name="StaticBody2D" parent="." instance=ExtResource("3_otxru")]
position = Vector2(-14, -21)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(338, 71)
anchor_mode = 0
zoom = Vector2(4.75, 4.75)
limit_left = 320
limit_right = 700
limit_bottom = 250

[node name="Interactable2D" parent="." instance=ExtResource("4_cher8")]
position = Vector2(325, 150)
scale = Vector2(2, 5)

[connection signal="focused" from="Interactable2D" to="." method="_on_interactable_2d_focused"]
[connection signal="interacted" from="Interactable2D" to="." method="_on_interactable_2d_interacted"]
[connection signal="unfocused" from="Interactable2D" to="." method="_on_interactable_2d_unfocused"]
